<resources>
    <string name="app_name">PAYS POS</string>
    <string name="PREF_BARCODE_SCANNER">BarcodeScannerPrefs</string>
    <string name="tv_pos">PAYS POS</string>
    <string name="tv_Info">Enterprise Cloud Point of Sale</string>
    <string name="tv_hint_email">Email Address <font color='#ff6000'>*</font></string>
    <string name="tv_hint_email_">Email Address</string>
    <string name="tv_hint_password">Password <font color='#ff6000'>*</font></string>
    <string name="tv_login">Login</string>
    <string name="tv_info_provider">If you forgot password, please <font color='#00A3E0'>contact</font> your sales provider</string>
    <string name="tv_pos_2021">&#169; PAYS POS %1$s</string>
    <string name="save">Save</string>
    <string name="category_name">Category Name <font color='#ff6000'>*</font></string>
    <string name="assign_item_to_category">Assign Item to category</string>
    <string name="tap_to_edit">Tap to Edit</string>
    <string name="edit_item_title">Update Item Title</string>
    <string name="choose_color">Choose Color</string>
    <string name="choose_image">Choose Image</string>
    <string name="take_photo">Take Photo</string>
    <string name="tv_clock_in_out">Clock In/Out</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_enter_your_passcode">Enter Passcode</string>
    <string name="loading">Loading…</string>
    <string name="no_internet">Internet is required for the application to work. Please enable the internet and try again.</string>
    <string name="first_name">First Name</string>
    <string name="first_name_normal">First Name</string>
    <string name="last_name">Last Name <font color='#ff6000'>*</font></string>
    <string name="last_name_normal">Last Name</string>
    <string name="last_name_">Last Name</string>
    <string name="phone">Mobile Number <font color='#ff6000'>*</font></string>
    <string name="_phone">Mobile Number</string>
    <string name="_phone_number">Mobile Number</string>
    <string name="address_empty_validation">Please enter Full Address</string>
    <string name="birth_date_validation">Please enter Birth Date</string>
    <string name="buttonOne">1</string>
    <string name="buttonTwo">2</string>
    <string name="buttonThree">3</string>
    <string name="buttonFour">4</string>
    <string name="buttonFive">5</string>
    <string name="buttonSix">6</string>
    <string name="buttonSeven">7</string>
    <string name="buttonEight">8</string>
    <string name="buttonNine">9</string>
    <string name="buttonPlus">+</string>
    <string name="buttonClear">.</string>
    <string name="buttonZero">0</string>
    <string name="email_validate">Please enter Email Address</string>
    <string name="valid_email_validate">Please enter valid Email Address</string>
    <string name="password_validate">Please enter Password</string>
    <string name="item_name_validate">Please enter Item Name</string>
    <string name="category_select_validate">Please select Category Name</string>
    <string name="item_price_validate">Please enter valid Price</string>
    <string name="item_sku_validate">Please enter SKU</string>
    <string name="variation_name_validate">Please enter Variation Name</string>
    <string name="pax_connect_error">Please check your internet connection.\nPlease ensure your Card Reader is on same network.</string>
    <string name="category_name_validate">Please enter Category Name</string>
    <string name="modifier_name_validate">Please enter Modifier Name</string>
    <string name="modifier_set_name_validate">All modifier names must be different</string>
    <string name="option_name_validate">Please enter Option Name</string>
    <string name="display_option_name_validate">Please enter Display Name</string>
    <string name="tax_name_validate">Please enter Tax Name</string>
    <string name="note_name_validate">Please enter Note Name</string>
    <string name="tax_rate_validate">Please enter valid Tax Rate</string>
    <string name="item_pricing_validate">Please enter Item Pricing</string>
    <string name="tip_name_validate">Please enter Tip Name</string>
    <string name="tip_rate_validate">Please enter valid Tip Rate</string>
    <string name="minguest_valiidation">Please enter Minimum Guest Number</string>
    <string name="maxguest_valiidation">Please enter Maximum Guest Number</string>
    <string name="discount_name_validate">Please enter Discount Name</string>
    <string name="discount_rate_validate">Please enter valid Discount Rate</string>
    <string name="sercharge_name_validate">Please enter Service Charge Name</string>
    <string name="sercharge_rate_validate">Please enter valid Service Charge Rate</string>
    <string name="role_name_validate">Please enter Role Name</string>
    <string name="delete_tax_message">Are you sure, you want to delete Tax?</string>
    <string name="delete_active_tax_message">This is an active Tax. Are you sure you want to delete this Tax?</string>
    <string name="delete_tip_message">Are you sure, you want to delete the Tip?</string>
    <string name="delete_active_tip_message">This is an Active Tip. Are you sure you want to delete this Tip?</string>
    <string name="delete_note_message">Are you sure, you want to delete Note?</string>
    <string name="delete_active_note_message">This is an active Note. Are you sure you want to delete this Note?</string>
    <string name="delete_discount_message">Are you sure, you want to delete Discount?</string>
    <string name="delete_active_discount_message">This is an active Discount. Are you sure you want to delete this Discount?</string>
    <string name="delete_customer_message">Are you sure, you want to delete this Customer?</string>
    <string name="delete_service_charge_message">Are you sure, you want to delete Service Charge?</string>
    <string name="delete_loyalty_message">Are you sure, you want to delete Loyalty Program?</string>
    <string name="delete_active_loyalty_message">This is an active Loyalty Program. Are you sure you want to delete this Loyalty Program?</string>
    <string name="delete_employee_message">Are you sure, you want to delete Employee?</string>
    <string name="clockout_message">Are you sure, you want to Clockout?</string>
    <string name="delete_item_message">Are you sure, you want to delete this item?</string>
    <string name="delete_items_message">Are you sure, you want to delete this order?</string>
    <string name="delete_employee_role_message">Are you sure, you want to delete employee Role?</string>
    <string name="delete_printer_message">Are you sure, you want to delete the Printer?</string>
    <string name="delete_category_message">Are you sure, you want to delete this Category?</string>
    <string name="hide_category_message">Are you sure, you want to hide category?</string>
    <string name="hide_item_message">Are you sure, you want to hide item?</string>
    <string name="unhide_category_message">Are you sure, you want to unhide category?</string>
    <string name="unhide_item_message">Are you sure, you want to unhide item?</string>
    <string name="delete_modifier_message">Are you sure, you want to delete modifier set?</string>
    <string name="delete_option_message">Are you sure, you want to delete option set?</string>
    <string name="tv_personal_info">Personal Info</string>
    <string name="tv_jobs">Jobs</string>
    <string name="tv_primary_job_title">Primary Job Title</string>
    <string name="tv_hourly_rate">Hourly Rate</string>
    <string name="tv_access">Access</string>
    <string name="tv_permission_set_">Role <font color='#ff6000'>*</font></string>
    <string name="tv_permission_set">Permission Set <font color='#ff6000'>*</font></string>
    <string name="tv_personal_passcode">Passcode</string>
    <string name="tv_personal_passcode_">Passcode<font color='#ff6000'>*</font></string>
    <string name="tv_location">Location</string>
    <string name="tv_create_team_member">Add Employee</string>
    <string name="tv_update_team_member">Update Employee</string>
    <string name="tv_info_email">Adding an email will invite this employee to create their login for POS.</string>
    <string name="tv_add_job_title">Add Job Title</string>
    <string name="tv_team_permissions">Choose Role</string>
    <string name="tv_clock_in">Clock In</string>
    <string name="tv_team">Employees</string>
    <string name="tv_continue_to_pos">Continue to POS</string>
    <string name="name">Name <font color='#ff6000'>*</font></string>
    <string name="item_name_1">Item Name <font color='#ff6000'>*</font></string>
    <string name="tax_name">Tax Name <font color='#ff6000'>*</font></string>
    <string name="plus">+</string>
    <string name="options">Options</string>
    <string name="add_options">Add Options</string>
    <string name="add_a_custom_set_of_options_to_an_item_to_create_variations_learn_more"><![CDATA[Add a custom set of options to an item to create variations.]]></string>
    <string name="price_and_inventory">Price and inventory</string>
    <string name="unit_type">Unit Type</string>
    <string name="per_item">Per Item</string>
    <string name="choose_between_selling_whole_or_decimal_quantities_for_the_item_learn_more">Choose between selling whole or decimal quantities for the item. Learn more</string>
    <string name="price">Price</string>
    <string name="markup_price">Markup Price</string>
    <string name="sku">SKU</string>
    <string name="stock">Stock</string>
    <string name="receive_stock">Receive Stock</string>
    <string name="add_variation">Add Variation</string>
    <string name="leave_the_price_blank_to_enter_at_the_time_of_sale">Leave the price blank to enter at the time of sale.</string>
    <string name="modifier_sets">Modifier sets</string>
    <string name="description">Description</string>
    <string name="modifier_set_name">Modifier Set Name <font color='#ff6000'>*</font></string>
    <string name="to_set_pre_selected_modifiers_or_update_the_minimum_maximum_number_of_modifiers_that_can_be_applied_visit_your_dashboard_if_you_modify_this_set_in_point_of_sale_it_will_only_apply_the_basic_settings_below">To set pre-selected modifiers or update the minimum/maximum number of modifiers that can be applied, visit your Dashboard. If you modify this set in Point of Sale, it will only apply the basic settings below.</string>
    <string name="modifiers">Modifiers</string>
    <string name="modifier">Modifier</string>
    <string name="_0_00">$0.00</string>
    <string name="apply_set">Apply Set</string>
    <string name="new_modifier_set">Create Modifier Set</string>
    <string name="search">Search</string>
    <string name="create_item">Create Item</string>
    <string name="add_new_items">+ Add New Item</string>
    <string name="add_new_itemswithoutplus">Add New Item</string>
    <string name="item_name_withstar">Item Name<font color='#ff6000'>*</font></string>
    <string name="add_tax_name">Add Tax Name</string>
    <string name="add_tax_name_">Tax Name<font color='#ff6000'>*</font></string>
    <string name="remove_customer">Remove Customer</string>
    <string name="tv_submit">Submit</string>
    <string name="tv_total_hours">Total Hours</string>
    <string name="tv_total_wage">Total Wages</string>
    <string name="tv_mon">Mon</string>
    <string name="tv_tue">Tue</string>
    <string name="tv_wed">Wed</string>
    <string name="tv_thu">Thu</string>
    <string name="tv_fri">Fri</string>
    <string name="tv_sat">Sat</string>
    <string name="tv_sun">Sun</string>
    <string name="add_order_note">Add Order Note</string>
    <string name="clear_items">Delete Order</string>
    <string name="tv_team_member">Employee</string>
    <string name="clear">Clear</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="add_order_discount">Add Order Discount</string>
    <string name="add_guest">Add Guest</string>
</resources>