<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <item
        android:id="@+id/menu_discount"
        android:title="@string/add_order_discount"
        tools:ignore="HardcodedText" />
    <item
        android:id="@+id/menu_remove_customer"
        android:title="@string/remove_customer"
        tools:ignore="HardcodedText" />
    <item
        android:id="@+id/menu_add_guest"
        android:title="@string/add_guest"
        tools:ignore="HardcodedText" />
    <item
        android:id="@+id/menu_order_note"
        android:title="@string/add_order_note"
        tools:ignore="HardcodedText" />
    <item
        android:id="@+id/menu_clear_cart"
        android:title="@string/clear_items"
        tools:ignore="HardcodedText" />


</menu>