<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#1d1d1f"
    android:orientation="vertical"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOne"
            style="@style/CustomFontRegularStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/_23sdp"
            android:layout_weight="1"
            android:background="@color/lightGrey"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/buttonOne"
            android:textColor="@color/white"
            android:textSize="@dimen/_8mdpi" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTwo"
            style="@style/CustomFontRegularStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/_23sdp"
            android:layout_marginHorizontal="@dimen/_3sdp"
            android:layout_weight="1"
            android:background="@color/lightGrey"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/buttonTwo"
            android:textColor="@color/white"
            android:textSize="@dimen/_8mdpi" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvThree"
            style="@style/CustomFontRegularStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/_23sdp"
            android:layout_weight="1"
            android:background="@color/lightGrey"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/buttonThree"
            android:textColor="@color/white"
            android:textSize="@dimen/_8mdpi" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_3sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvFour"
            style="@style/CustomFontRegularStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/_23sdp"
            android:layout_weight="1"
            android:background="@color/lightGrey"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/buttonFour"
            android:textColor="@color/white"
            android:textSize="@dimen/_8mdpi" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvFive"
            style="@style/CustomFontRegularStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/_23sdp"
            android:layout_marginHorizontal="@dimen/_3sdp"
            android:layout_weight="1"
            android:background="@color/lightGrey"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/buttonFive"
            android:textColor="@color/white"
            android:textSize="@dimen/_8mdpi" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSix"
            style="@style/CustomFontRegularStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/_23sdp"
            android:layout_weight="1"
            android:background="@color/lightGrey"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/buttonSix"
            android:textColor="@color/white"
            android:textSize="@dimen/_8mdpi" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_3sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSeven"
            style="@style/CustomFontRegularStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/_23sdp"
            android:layout_weight="1"
            android:background="@color/lightGrey"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/buttonSeven"
            android:textColor="@color/white"
            android:textSize="@dimen/_8mdpi" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEight"
            style="@style/CustomFontRegularStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/_23sdp"
            android:layout_marginHorizontal="@dimen/_3sdp"
            android:layout_weight="1"
            android:background="@color/lightGrey"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/buttonEight"
            android:textColor="@color/white"
            android:textSize="@dimen/_8mdpi" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNine"
            style="@style/CustomFontRegularStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/_23sdp"
            android:layout_weight="1"
            android:background="@color/lightGrey"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/buttonNine"
            android:textColor="@color/white"
            android:textSize="@dimen/_8mdpi" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_3sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtClearAll"
            style="@style/CustomFontRegularStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/_23sdp"
            android:layout_weight="1"
            android:background="@color/lightGrey"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/clear"
            android:textColor="@color/white"
            android:textSize="@dimen/_8mdpi" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvZero"
            style="@style/CustomFontRegularStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/_23sdp"
            android:layout_marginHorizontal="@dimen/_3sdp"
            android:layout_weight="1"
            android:background="@color/lightGrey"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="0"
            android:textColor="@color/white"
            android:textSize="@dimen/_8mdpi" />

        <ImageView
            android:id="@+id/txtClearLast"
            style="@style/CustomFontRegularStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/_23sdp"
            android:layout_weight="1"
            android:background="@color/lightGrey"
            android:padding="@dimen/_7sdp"
            android:src="@drawable/backspase"
            app:tint="@color/white" />
    </LinearLayout>

</LinearLayout>
