<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="MissingDefaultResource">

    <data>

        <variable
            name="loginViewModel"
            type="com.pays.pos.ui.fragments.loginscreen.ForgotPasswordViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/bg_color"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:padding="@dimen/_4sdp"
                app:srcCompat="@drawable/ic_arrow_back" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtTitle"
                style="@style/CustomFontBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:gravity="center"
                android:padding="@dimen/_4sdp"
                android:text="@string/forgot_password_title"
                android:textColor="@color/txtColor"
                android:textSize="@dimen/_6mdpi" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">


            <androidx.appcompat.widget.AppCompatTextView
                style="@style/CustomFontBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_pos"
                android:textColor="@color/txtColor"
                android:textSize="@dimen/_16mdpi"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/CustomFontMediumStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/tv_Info"
                android:textColor="@color/txtColor"
                android:textSize="@dimen/_7mdpi" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border_with_square_outlinne"
                android:minWidth="@dimen/_200sdp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:fontFamily="@font/sf_pro_display_semibold"
                    android:hint="@string/tv_hint_email"
                    android:imeOptions="actionNext"
                    android:inputType="textVisiblePassword"
                    android:padding="@dimen/_5sdp"
                    android:text="@={loginViewModel.loginDetails.emailAddress}"
                    android:textColor="@color/txtColor"
                    android:textColorHint="@color/hintColor"
                    android:textSize="@dimen/_7mdpi" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSubmit"
                style="@style/CustomFontSemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/btnColor"
                android:gravity="center"
                android:minWidth="@dimen/_200sdp"
                android:onClick="@{() -> loginViewModel.submit()}"
                android:padding="@dimen/_5sdp"
                android:text="@string/tv_submit"
                android:textColor="@color/white"
                android:textSize="@dimen/_6mdpi" />


        </LinearLayout>
    </RelativeLayout>


</layout>